--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         if (email === registeredEmail && password === registeredPassword) {
           Swal.fire("Welcome", "You have logged in successfully!", "success");
           setTimeout(() => {
-            window.location.href = "project-shop/home.html";
+            window.location.href = "/project-shop/home.html";
           }, 2000);
         } else {
           Swal.fire("Oops!", "Wrong Credientials!", "error");
