--- a/home.html
+++ b/home.html
@@ -257,10 +257,11 @@
           <div class="footer-col-3">
             <h3>Usefull Links</h3>
             <ul>
-              <li>coupons</li>
-              <li>blog post</li>
-              <li>return policy</li>
-              <li>joinaffikiate</li>
+              <li><a href="home.html">Home </a></li>
+              <li><a href="product.html">Products </a></li>
+              <li><a href="about.html">About Us </a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="index.html">Login/Signup</a></li>
             </ul>
           </div>
           <div class="footer-col-4">
